# cautious-tribble

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.prebuild  README.md  bors.toml  test-integration-existing-minikube.sh  test-integration.sh  todo.org
.github/workflows/: ci.yaml
aggregator/: Cargo.toml
aggregator/src/: api.rs  config.rs  deployer_watch.rs  main.rs  transitioner_watch.rs  versions_watch.rs
aggregator/src/fixtures/: test_repo1.yaml
common/: Cargo.toml
common/src/: aggregator.rs  config.rs  deployment.rs  git.rs  lib.rs  repo.rs  transitions.rs
common/src/fixtures/: test_repo.yaml
deployer/: Cargo.toml
deployer/src/: api.rs  config.rs  git_hash.rs  main.rs
deployer/src/deployment/: dummy.rs  kubernetes.rs  mock.rs  mod.rs
deployer/src/deployment/fixtures/: get_deployments_1.yaml  get_deployments_2.yaml  get_deployments_added.yaml  get_deployments_changed.yaml  get_deployments_glob.yaml  get_deployments_no_deployments.yaml  get_resources_2.yaml  get_resources_changed.yaml  get_resources_glob.yaml  get_resources_jsonnet_1.yaml  get_resources_jsonnet_2.yaml  get_resources_separated.yaml
dm/: Chart.yaml  values.yaml
dm/charts/aggregator/: Chart.yaml  values.yaml
dm/charts/aggregator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
dm/charts/deployer/: Chart.yaml  values.yaml
dm/charts/deployer/templates/: _helpers.tpl  deployment.yaml  service.yaml
dm/charts/transitioner/: Chart.yaml  values.yaml
dm/charts/transitioner/templates/: _helpers.tpl  deployment.yaml  service.yaml
git_fixture/: Cargo.toml
git_fixture/src/: lib.rs
integration_test/: Cargo.toml
integration_test/images/: build.sh
integration_test/src/: config_playground.yaml  example.yaml  integration_test.rs  lib.rs  main.rs
integration_test/tests/: config_k8s.yaml  config_mock.yaml  config_no_deployers.yaml  deploy_and_transition.rs  deploy_and_transition_mock.rs  deploy_k8s.rs  repo.yaml  repo_k8s.yaml  repo_mock.yaml  run_deployer.rs  s1-service.yaml
tests/: config.yaml
tests/config/: exampleservice.yaml  services.yaml
tests/images/example-service/: Dockerfile
transitioner/: Cargo.toml
transitioner/src/: api.rs  config.rs  locks.rs  main.rs  precondition.rs  transition_state.rs
transitioner/src/fixtures/: both_locked.yaml  prod_locked.yaml  resource_locked.yaml  second_transition_runs.yaml  simple_config.yaml  three_envs_config.yaml  timed_transition_config.yaml  timed_transition_config_no_schedule.yaml  timed_transition_pending.yaml  timed_transition_pending_no_schedule.yaml  transition_priority.yaml  transition_source_missing.yaml  transition_subdirs.yaml  transition_target_changed.yaml  transition_target_created.yaml
ui/: index.html  package.json  tsconfig.json  tslint.json  webpack.config.js
ui/src/: HistoryView.tsx  ResourcesView.tsx  VersionDialog.tsx  api.tsx  index.html  index.tsx
