[package]
name = "aggregator"
version = "0.1.0"
authors = ["Florian Diebold <flodiebold@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
git2 = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
structopt = "0.2"
reqwest = "0.9"

warp = "0.1"
futures = "0.1"

crossbeam = "0.5"
bus = "2"

log = "0.4"
env_logger = "0.6"

regex = "1"

common = { path = "../common" }

[dev-dependencies]
git_fixture = { path = "../git_fixture" }
