[package]
name = "common"
version = "0.1.0"
authors = ["Florian Diebold <flodiebold@gmail.com>"]

[dependencies]
failure = "0.1"
git2 = "0.7"
serde = "1.0"
serde_derive = "1.0"
# serde_yaml = "0.7"
tempfile = "3"

indexmap = { version = "1", features = ["serde-1"] }

chrono = { version = "0.4", features = ["serde"] }

openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
git_fixture = { path = "../git_fixture" }
