[package]
name = "deployer"
version = "0.1.0"
authors = ["Florian Diebold <flodiebold@gmail.com>"]

[dependencies]
failure = "0.1"
git2 = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
structopt = "0.2"

gotham = "0.2"
hyper = "0.12"
mime = "0.3"

crossbeam = "0.3"

log = "0.4.3"
env_logger = "0.5.11"

# kubeclient = "0.1"
kubeclient = { git = "https://github.com/flodiebold/kubeclient-rs.git" }
k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi-codegen", branch = "master", features = ["v1_10"] }

common = { path = "../common" }

[dev-dependencies]
git_fixture = { path = "../git_fixture" }
