[package]
name = "deployer"
version = "0.1.0"
authors = ["Florian Diebold <flodiebold@gmail.com>"]
edition = "2018"

[features]
vendored-openssl = ["common/vendored-openssl"]

[dependencies]
failure = "0.1"
git2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
structopt = "0.2"
regex = "1"
envy = "0.4"
jsonnet-rs = "0.6"

warp = "0.1"

crossbeam = "0.6"

log = "0.4"
env_logger = "0.6"

# kubeclient = "0.1"
# kubeclient = { git = "https://github.com/flodiebold/kubeclient-rs.git" }
kubernetes = { git = "https://github.com/ynqa/kubernetes-rust.git" }
# k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi-codegen", branch = "master", features = ["v1_10"] }
k8s-openapi = { version = "0.4", features = ["v1_10"] }
http = "0.1"

reqwest = "0.9"

common = { path = "../common" }

[dev-dependencies]
git_fixture = { path = "../git_fixture" }
