[package]
name = "integration_test"
version = "0.1.0"
authors = ["Florian Diebold <flodiebold@gmail.com>"]

[dependencies]
tempfile = "3"
nix = "0.10"
reqwest = "0.8"
failure = "0.1"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
git2 = "0.6"

common = { path = "../common" }
git_fixture = { path = "../git_fixture" }
deployer = { path = "../deployer" }
