[package]
name = "integration_test"
version = "0.1.0"
authors = ["Florian Diebold <flodiebold@gmail.com>"]

[dependencies]
tempfile = "3"
nix = "0.11"
reqwest = "0.9"
failure = "0.1"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
git2 = "0.7"
signal-hook = "0.1"
websocket = "0.20"

indexmap = { version = "1", features = ["serde-1"] }

common = { path = "../common" }
git_fixture = { path = "../git_fixture" }
deployer = { path = "../deployer" }
