[package]
name = "transitioner"
version = "0.1.0"
authors = ["Florian Diebold <flodiebold@gmail.com>"]

[dependencies]
failure = "0.1"
git2 = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
structopt = "0.2"
reqwest = "0.8"

gotham = "0.2"
hyper = "0.11"
mime = "0.3"

crossbeam = "0.3"

log = "0.4.1"
env_logger = "0.5.4"

indexmap = { version = "1", features = ["serde-1"] }

chrono = { version = "0.4", features = ["serde"] }
cron = { git = "https://github.com/lholden/cron", rev = "28e8ea81c2bcb121716aaa514bfa0954d638c2d3" }

common = { path = "../common" }

[dev-dependencies]
git_fixture = { path = "../git_fixture" }
