[package]
name = "transitioner"
version = "0.1.0"
authors = ["Florian Diebold <flodiebold@gmail.com>"]

[dependencies]
failure = "0.1"
git2 = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
structopt = "0.2"
reqwest = "0.8"

warp = "0.1"

crossbeam = "0.4"

log = "0.4"
env_logger = "0.5"

indexmap = { version = "1", features = ["serde-1"] }

chrono = { version = "0.4", features = ["serde"] }
cron = { git = "https://github.com/zslayton/cron", rev = "2ef8d178189cd6fa04ee41c19354afa7141c6c73" }

common = { path = "../common" }

[dev-dependencies]
git_fixture = { path = "../git_fixture" }
